Added a section on template comparison with Jims paper from 2014.

--- a/TESSUCD1.tex
+++ b/TESSUCD1.tex
@@ -146,6 +146,16 @@ The flare frequency distribution, binned by spectral type, is shown in Figure~\r
 
 Here, we will probably also talk a lot about the power law fits. 
 
+\subsection{Empirical flare template}\label{subsec:template}
+GJ1243, a radiply rotating M4 dwarf with $P=0.592$\,d, was observed by the primary Kepler mission in 1 min cadence for 11 months. It was actively flaring with a total of 885 flares detected in the light curves~\citep{davenport2014}. From these a semi-empirical flare template was derived with a polynomial rise phase and two overlapping exponential decay phases, which has been widely used in later studies. We reproduced Figure 4 from~\citet{davenport2014} here with the flares in our sample, and fitted the template to the result. If the models are fully consistent, the best fit values for the template parameters will be $t_{peak}=1.$, $FWHM=1.$, and $a=1.$ within uncertainties.
+
+\begin{figure}
+	\includegraphics[width=0.5\columnwidth]{11_03_2020_11_15_all_davenport_fit_median_norel.png}
+    \caption{Yellow: individual flare light curves. Black: Samples from the posterior distribution}
+    \label{fig:template}
+\end{figure}
+
+
 \section{Summary/Conclusions} \label{sec:conclusion}
 
 
