--- a/TESS_UCD.bib
+++ b/TESS_UCD.bib
@@ -1,3 +1,53 @@
+%% Additional references
+
+@ARTICLE{davenport2014,
+       author = {{Davenport}, James R.~A. and {Hawley}, Suzanne L. and {Hebb}, Leslie and
+         {Wisniewski}, John P. and {Kowalski}, Adam F. and {Johnson}, Emily C. and
+         {Malatesta}, Michael and {Peraza}, Jesus and {Keil}, Marcus and
+         {Silverberg}, Steven M. and {Jansen}, Tiffany C. and
+         {Scheffler}, Matthew S. and {Berdis}, Jodi R. and {Larsen}, Daniel M. and
+         {Hilton}, Eric J.},
+        title = "{Kepler Flares. II. The Temporal Morphology of White-light Flares on GJ 1243}",
+      journal = {\apj},
+     keywords = {stars: activity, stars: flare, stars: low-mass, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2014,
+        month = dec,
+       volume = {797},
+       number = {2},
+          eid = {122},
+        pages = {122},
+     abstract = "{We present the largest sample of flares ever compiled for a single M
+        dwarf, the active M4 star GJ 1243. Over 6100 individual flare
+        events, with energies ranging from {}10$^{29}$ to {}10$^{33}$
+        erg, are found in 11 months of 1 minute cadence data from
+        Kepler. This sample is unique for its completeness and dynamic
+        range. We have developed automated tools for finding flares in
+        short-cadence Kepler light curves, and performed extensive
+        validation and classification of the sample by eye. From this
+        pristine sample of flares we generate a median flare template.
+        This template shows that two exponential cooling phases are
+        present during the white-light flare decay, providing
+        fundamental constraints for models of flare physics. The
+        template is also used as a basis function to decompose complex
+        multi-peaked flares, allowing us to study the energy
+        distribution of these events. Only a small number of flare
+        events are not well fit by our template. We find that complex,
+        multi-peaked flares occur in over 80\% of flares with a duration
+        of 50 minutes or greater. The underlying distribution of flare
+        durations for events 10 minutes and longer appears to follow a
+        broken power law. Our results support the idea that sympathetic
+        flaring may be responsible for some complex flare events.}",
+          doi = {10.1088/0004-637X/797/2/122},
+archivePrefix = {arXiv},
+       eprint = {1411.3723},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2014ApJ...797..122D},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
