--- a/TESSUCD1.tex
+++ b/TESSUCD1.tex
@@ -101,11 +101,12 @@ To find flares in the TESS UCD sample, we used the AltaiPony flare finding code 
 \subsubsection{Custom apertures and de-trending}
 TESS light curves have pre-defined aperture masks but for a number of targets they were shifted for reasons. We decided to re-extract all light curves manually, using the \texttt{lightkurve}~\citep{lightkurve2019} toolbox designed for Kepler/K2 and TESS data analysis. Consequently, we manually masked observing periods with strong systematics, that the internal TESS de-trending procedure would have otherwise accounted for, on a sector-by-sector basis.
 \subsubsection{Light curve de-trending}
-For the very rapid rotators with periods up to two days we fit and remove a sinusoidal first. To find these periods, we used Lomb-Scargle periodograms (\texttt{lightkurve.Periodogram}, see~\citealt{lomb1976,scargle1982}).  It makes sense to do it like this because we expect increasing active region evolution for longer periods. the typical timescale of short rotation periods come closest to those of flare durations. Removing variability on these timescales with any kind of band pass filter will modify the flare signal, too.  Fitting and removing sinusoidal signal with periods we obtained from  of each light curve does not affect the flares because they are not periodic phenomena. \\
-Once rapid rotation was removed, we used boxcar-median subtraction as a safety net with windows between 3.33 and 10 h lengths\\
-Savitzky-Golay~\citep{SavGol1964} filter with appropriate window length. This filter is known as a flexible high-pass filter in signal processing: \texttt{scipy.signal.savgol\_filter}~\citep{scipy2019} function for this.%Scipy published in nature methods in 2020, find bibtex entry and cite the reviewed instead of the preprint here
+TESS UCD light curves exhibited various astrophysical and systematic trends. Removing them was necessary to enable searching the residual time series for flares with a simple, deterministic algorithm, and determining the quiescent flux nd noise properties of the light curve as accurately as possible. The main trends stemmed from the movement of the spacecraft, and stellar rotational modulation caused by spots.
 \\
-Two flares were found last longer than one full rotation period. Their analysis is covered in (Ilin et al. 2020, in prep.).
+To account for these effects we arrived at the following procedure: If the difference in flux from the beginning to the end of the light curve was $>20,\%$ we fitted a cubic spline to the $12$ h binned light curve to remove strong global trends that take effect on time scales of multiple days. When no strong global trends were left, we removed strong rotational modulation iteratively using sine fits with periods obtained from  Lomb-Scargle periodograms~(\texttt{lightkurve.Periodogram}, see~\citealt{lomb1976,scargle1982}) until no strong periods were left in the light curve. To this end, we computed Signal-to-Noise Spectra from the periodograms using the \texttt{lightkurve.Periodogram.flatten()} method that divided out the noise background using a moving median where the filter width that grows logarithmically in frequency space.
+Next, we removed remaining trends with using a rolling median on time scales of $10$ h, longer than the vast majority of flares was visible. To remove trends on shorter time scales, we masked outliers that could be flare candidates. We padded them with $25$ data points before and after each series of outliers. We applied a Savitzky-Golay~\citep{SavGol1964} filter (\texttt{scipy.signal.savgol\_filter},~\citealt{scipy2019}) with window sizes that were three times shorter that the dominant residual frequency in any continuous observing period. The Savitzky-Golay filter is known as a flexible high-pass filter in signal processing. We determined the dominant frequency using a Fast Fourier Transformation (FFT) from \texttt{scipy.fftpack}~\citep{scipy2019}. The minimum window size was $2.5$ h. In a final step we filtered the light curve with the minimum window size of 2.5 h, and estimated the scatter in the light curve using a rolling standard deviation (window size$= .5$ h) masking and padding positive outliers, i.e. flare candidates, as before. The masked regions in the light curve were assigned the mean uncertainty from the rest of the light curve. Thus we used the non-flaring parts of the light curve to determine the quiescent flux and noise propertiers.
+\\
+The timescale of rotational modulation for the fastest rotating stars came close or even fell below flare durations of a few observed events. Removing variability on these timescales with any kind of band pass filter would modify the flare signal, too.  resorting and removing sinusoidal signal with very short periods, however, circumvented this shortcoming. Stars that showed these multiperiod flares will be adressed elsewhere~(Ilin et al. (in prep.)).
 \subsubsection{Amplitude, duration, ED and their uncertainties}
 determine the noise properties: Use the flaring part of the LC to determine the flare properties, use the rest to estimate the noise properties. Even for the most active stars, flares do not take up more than \# \% observed time.
 \\
