--- a/TESS_UCD.bib
+++ b/TESS_UCD.bib
@@ -1,5 +1,38 @@
 %% Additional references
 
+@article{chang2015,
+  title = {Photometric {{Study}} on {{Stellar Magnetic Activity}}. {{I}}. {{Flare Variability}} of {{Red Dwarf Stars}} in the {{Open Cluster M37}}},
+  volume = {814},
+  issn = {1538-4357},
+  doi = {10.1088/0004-637X/814/1/35},
+  timestamp = {2017-04-06T11:27:55Z},
+  number = {1},
+  urldate = {2017-04-06},
+  journal = {The Astrophysical Journal},
+  author = {Chang, S.-W. and Byun, Y.-I. and Hartman, J. D.},
+  month = nov,
+  year = {2015},
+  keywords = {cluster analysis,flare,flare age relation,flares in clusters,M37,number of non-flaring flare stars,OC,read},
+  pages = {35},
+}
+
+@article{huntwalker2012,
+  title = {{{MOST Observations}} of the {{Flare Star AD Leo1}}},
+  volume = {124},
+  issn = {00046280, 15383873},
+  doi = {10.1086/666495},
+  timestamp = {2018-06-15T16:01:25Z},
+  number = {916},
+  urldate = {2017-06-09},
+  journal = {Publications of the Astronomical Society of the Pacific},
+  author = {Hunt-Walker, Nicholas M. and Hilton, Eric J. and Kowalski, Adam F. and Hawley, Suzanne L. and Matthews, Jaymie M.},
+  month = jun,
+  year = {2012},
+  pages = {545--551},
+  file = {Hunt-W_ 2012 _MOS.pdf:/media/ekaterina/OS/Users/Katja/Documents/Astro/Literature/Cool Stars and Magnetic Activity/Hunt-W_ 2012 _MOS.pdf:application/pdf},
+  groups = {Cool Stars and Magnetic Activity}
+}
+
 @ARTICLE{davenport2014,
        author = {{Davenport}, James R.~A. and {Hawley}, Suzanne L. and {Hebb}, Leslie and
          {Wisniewski}, John P. and {Kowalski}, Adam F. and {Johnson}, Emily C. and
