FFD plots include

--- a/TESSUCD1.tex
+++ b/TESSUCD1.tex
@@ -165,6 +165,18 @@ The flare frequency distribution, binned by spectral type, is shown in Figure~\r
     \label{fig:ffd}
 \end{figure}
 
+\begin{figure}
+	\includegraphics[width=0.5\columnwidth]{12_03_2020_13_03_full_sample_ffd.png}
+    \caption{Log of flare frequency as a function of $ED$ for the TESS Cycle 1 short cadence sample.}
+    \label{fig:ffd_all_ed}
+\end{figure}
+
+\begin{figure}
+	\includegraphics[width=0.5\columnwidth]{12_03_2020_13_03_individual_target_ffds.png}
+    \caption{Log of flare frequency as a function of $ED$ for the most actively flaring stars in TESS Cycle 1 short cadence sample.}
+    \label{fig:ffd_all_ed}
+\end{figure}
+
 Here, we will probably also talk a lot about the power law fits. 
 
 \subsection{Empirical flare template}\label{subsec:template}
