Improved figures to show other targets and spts in the background.

--- a/TESSUCD1.tex
+++ b/TESSUCD1.tex
@@ -172,8 +172,14 @@ The flare frequency distribution, binned by spectral type, is shown in Figure~\r
 \end{figure}
 
 \begin{figure}
-	\includegraphics[width=0.5\columnwidth]{12_03_2020_13_03_individual_target_ffds.png}
+	\includegraphics[width=0.5\columnwidth]{12_03_2020_14_10_individual_target_ffds.png}
     \caption{Log of flare frequency as a function of $ED$ for the most actively flaring stars in TESS Cycle 1 short cadence sample.}
+    \label{fig:ffd_all_ed}
+\end{figure}
+
+\begin{figure}
+	\includegraphics[width=0.5\columnwidth]{12_03_2020_14_42_spt_ffds.png}
+    \caption{Log of flare frequency as a function of $ED$ split by spectral type in TESS Cycle 1 short cadence sample.}
     \label{fig:ffd_all_ed}
 \end{figure}
 
