--- a/TESS_UCD.bib
+++ b/TESS_UCD.bib
@@ -33,6 +33,28 @@
   groups = {Cool Stars and Magnetic Activity}
 }
 
+@ARTICLE{davenport2016,
+       author = {{Davenport}, James R.~A.},
+        title = "{The Kepler Catalog of Stellar Flares}",
+      journal = {\apj},
+     keywords = {stars: activity, stars: flare, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2016,
+        month = sep,
+       volume = {829},
+       number = {1},
+          eid = {23},
+        pages = {23},
+          doi = {10.3847/0004-637X/829/1/23},
+archivePrefix = {arXiv},
+       eprint = {1607.03494},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2016ApJ...829...23D},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+
 @ARTICLE{davenport2014,
        author = {{Davenport}, James R.~A. and {Hawley}, Suzanne L. and {Hebb}, Leslie and
          {Wisniewski}, John P. and {Kowalski}, Adam F. and {Johnson}, Emily C. and
