--- a/TESS_UCD.bib
+++ b/TESS_UCD.bib
@@ -1,5 +1,75 @@
 %% Additional references
 
+@MISC{lightkurve2019,
+   author = {{Lightkurve Collaboration} and {Cardoso}, J.~V.~d.~M. and
+             {Hedges}, C. and {Gully-Santiago}, M. and {Saunders}, N. and
+             {Cody}, A.~M. and {Barclay}, T. and {Hall}, O. and
+             {Sagear}, S. and {Turtelboom}, E. and {Zhang}, J. and
+             {Tzanidakis}, A. and {Mighell}, K. and {Coughlin}, J. and
+             {Bell}, K. and {Berta-Thompson}, Z. and {Williams}, P. and
+             {Dotson}, J. and {Barentsen}, G.},
+    title = "{Lightkurve: Kepler and TESS time series analysis in Python}",
+ keywords = {Software, NASA},
+howpublished = {Astrophysics Source Code Library},
+     year = 2018,
+    month = dec,
+archivePrefix = "ascl",
+   eprint = {1812.013},
+   adsurl = {http://adsabs.harvard.edu/abs/2018ascl.soft12013L},
+}
+
+@MISC{aigrain_software2016,
+       author = {{Aigrain}, Suzanne and {Parviainen}, Hannu and {Pope}, Benjamin},
+        title = "{K2SC: K2 Systematics Correction}",
+     keywords = {Software},
+         year = 2016,
+        month = may,
+          eid = {ascl:1605.012},
+        pages = {ascl:1605.012},
+archivePrefix = {ascl},
+       eprint = {1605.012},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2016ascl.soft05012A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{lacy1976,
+       author = {{Lacy}, C.~H. and {Moffett}, T.~J. and {Evans}, D.~S.},
+        title = "{UV Ceti stars: statistical analysis of observational data.}",
+      journal = {\apjs},
+     keywords = {Light Curve, Stellar Spectrophotometry, Ubv Spectra, Variable Stars, Statistical Analysis, Stellar Luminosity, Stellar Spectra, Astronomy},
+         year = 1976,
+        month = jan,
+       volume = {30},
+        pages = {85-96},
+          doi = {10.1086/190358},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1976ApJS...30...85L},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{maschberger2009,
+       author = {{Maschberger}, Thomas and {Kroupa}, Pavel},
+        title = "{Estimators for the exponent and upper limit, and goodness-of-fit tests for (truncated) power-law distributions}",
+      journal = {\mnras},
+     keywords = {methods: data analysis, methods: statistical, stars: luminosity function, mass function, galaxies: star clusters, Astrophysics - Instrumentation and Methods for Astrophysics, Astrophysics - Astrophysics of Galaxies},
+         year = 2009,
+        month = may,
+       volume = {395},
+       number = {2},
+        pages = {931-942},
+          doi = {10.1111/j.1365-2966.2009.14577.x},
+archivePrefix = {arXiv},
+       eprint = {0905.0474},
+ primaryClass = {astro-ph.IM},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2009MNRAS.395..931M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @article{chang2015,
   title = {Photometric {{Study}} on {{Stellar Magnetic Activity}}. {{I}}. {{Flare Variability}} of {{Red Dwarf Stars}} in the {{Open Cluster M37}}},
   volume = {814},
